updating layout page to have "in progress" notice.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -34,6 +34,7 @@
 		<div class="one_half"></div><div class="one_half last"></div>
 
 	</div>
+	<h6>Alpha, beta, your choice. This site is very much draft and a work in progress.</h6>
 </div>
 </body>
 </html>
