--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,20 @@
 	<div id="sidebar" class="five columns">
 		<ul>
-			<li class="widget-container widget_text"><p>&nbsp;</p><div class="button small"><a target="_self" class="button white" href="form.html">Submit Your Code</a></div>
+			<li class="widget-container widget_text">
+				<h3 class="widget-title">Search</h3>
+				<div class="textwdget">
+				<form accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get"><div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
+
+    <input id="affiliate" name="affiliate" type="hidden" value="mobilecodecatalog" />
+    <label for="query">Enter Search Term(s):</label>
+    <input autocomplete="off" class="usagov-search-autocomplete" id="query" name="query" type="text" />
+    <input name="commit" type="submit" value="Search" />
+  </form>
+				</div>
+			</li>
+			<li class="widget-container widget_text">
+			<p>&nbsp;</p>
+			<div class="button small"><a target="_self" class="button white" href="form.html">Submit Your Code</a></div>
 				<h3 class="widget-title">Menu</h3>
 				
 				<div class="textwdget"><a href="index.html">Home</a><h6>Mobile Web</h6>
