--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -36,5 +36,16 @@
 
 	</div>
 </div>
+<script type="text/javascript">
+//<![CDATA[
+      var usasearch_config = { siteHandle:"mobilecodecatalog" };
+
+      var script = document.createElement("script");
+      script.type = "text/javascript";
+      script.src = "http://search.usa.gov/javascripts/remote.loader.js";
+      document.getElementsByTagName("head")[0].appendChild(script);
+
+//]]>
+</script>
 </body>
 </html>
