additional layout tweaks for the search

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
 					<form accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get">
 						<div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
 					    <input id="affiliate" name="affiliate" type="hidden" value="mobilecodecatalog" />
-					    <label for="query">Enter Search Term(s):</label><br>
+					    <label for="query" style="text-align: left">Enter Search Term(s):</label><br>
 				    	<input autocomplete="off" class="usagov-search-autocomplete" id="query" name="query" type="text" /><br>
 				    	<input name="commit" type="submit" value="Search" />
 				  	</form>
