second verse, same as the first.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
 			<p>&nbsp;</p>
 				<h3 class="widget-title">Search</h3>
 				<div class="textwdget">
-					<form accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get" style="margin-top:0;margin-bottom:0">
+					<form accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get" style="margin-top:0px;margin-bottom:0px">
 						<div style="margin:0;padding:0;display:inline"><input name="utf8" type="hidden" value="&#x2713;" /></div>
 					    <input id="affiliate" name="affiliate" type="hidden" value="mobilecodecatalog" />
 					    <label for="query" style="text-align: left">Enter Search Term(s):</label><br>
