added body style - hope: fix IE8 rendering issue.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -19,7 +19,7 @@
 		</style>
 		<title>Mobile App Catalog: {{ page.title }}</title>
 	</head>
-<body>
+<body class="page page-id-10 page-template-default">
 <div id="wrap" class="container">
 	<div class="dsic-logo"><a href="index.html"><img id="logo" src="images/dsic.png" alt="DSIC Home page"></a></div>
 	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a></div>
