another attempt at IE8 fix

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,11 @@
+<!doctype html>
 <html>
+<!--[if lt IE 7 ]><html class="ie ie6" dir="ltr" lang="en-US"> <![endif]-->
+<!--[if IE 7 ]><html class="ie ie7" dir="ltr" lang="en-US"> <![endif]-->
+<!--[if IE 8 ]><html class="ie ie8" dir="ltr" lang="en-US"> <![endif]-->
+<!--[if IE 9 ]><html class="ie ie9" dir="ltr" lang="en-US"> <![endif]-->
+<!--[if (gte IE 10)|!(IE)]><!--><html dir="ltr" lang="en-US"> <!--<![endif]-->
+
 	<head>
 		<link rel="stylesheet" id="custom" href="http://gsablogs.gsa.gov/dsic/?get_styles=css" type="text/css" media="all">
 		<link rel="stylesheet" id="skeleton-css" href="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/skeleton.css?ver=1.6" type="text/css" media="screen, projection">
