--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,7 +28,7 @@
 		<title>Mobile App Catalog: {{ page.title }}</title>
 	</head>
 <body class="page page-id-10 page-template-default">
-<a href="https://github.com/gsa/Mobile-Code-Catalog"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+<img style="position: fixed;z-index: 10000; top: 0; right: 30px; border: 0;" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub">
 <div id="wrap" class="container">
 	<div class="dsic-logo"><a href="index.html"><img id="logo" src="images/dsic.png" alt="DSIC Home page"></a></div>
 	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a></div>
