removing the "work in progress" text

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -32,7 +32,7 @@
 <div id="wrap" class="container">
 	<div class="dsic-logo"><a href="index.html"><img id="logo" src="images/dsic.png" alt="DSIC Home page"></a></div>
 	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a></div>
-	<h6>Alpha, beta, your choice. This site is very much draft and a work in progress.</h6>
+	<!---<h6>Alpha, beta, your choice. This site is very much draft and a work in progress.</h6>--->
 {{ content }}
 	<div id="footer" class="noborder sixteen columns">
 
