add page for Python resources

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,12 +16,13 @@
 			</li>
 			<li class="widget-container widget_text">
 				<h3 class="widget-title">Menu</h3>
-				
+
 				<div class="textwdget"><a href="index.html">Home</a><h6>Mobile Web</h6>
 				<ul>
 					<li><a href="web_html.html">HTML/CSS/JS</a></li>
 					<li><a href="web_jsp.html">JSP</a></li>
 					<li><a href="web_php.html">PHP</a></li>
+					<li><a href="web_python.html">Python</a></li>
 					<li><a href="web_ruby.html">Ruby</a></li>
 				</ul>
 							<h6>Native Apps</h6>
@@ -44,7 +45,7 @@
 				<h3 class="widget-title">Contact Us</h3>
 				<div class="textwdget">
 					<ul>
-					<li><strong><a href="qform.html">Got Questions?</a></strong></li>					
+					<li><strong><a href="qform.html">Got Questions?</a></strong></li>
 					<li></li>
 					</ul>
 				</div>
