--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -30,7 +30,7 @@
 <body class="page page-id-10 page-template-default">
 <div id="wrap" class="container">
 	<div class="dsic-logo"><a href="index.html"><img id="logo" src="images/dsic.png" alt="DSIC Home page"></a></div>
-	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a><a href="https://github.com/GSA/Mobile-Code-Catalog"><img style="position: absolute; top: 0; right: 90px; border: 0;" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub"></a>
+	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a><a href="https://github.com/GSA/Mobile-Code-Catalog"><img style="border: 0;" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub"></a>
 </div>
 	<!---<h6>Alpha, beta, your choice. This site is very much draft and a work in progress.</h6>--->
 {{ content }}
