changing ocsit-logo width to fit the ribbon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -23,6 +23,9 @@
 			.feature {
 				height: 310px;
 			}
+			.ocsit-logo {
+				width: 250px;
+				}
 		</style>
 		
 		<title>Mobile App Catalog: {{ page.title }}</title>
