moving the ribbon

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -31,9 +31,9 @@
 		<title>Mobile App Catalog: {{ page.title }}</title>
 	</head>
 <body class="page page-id-10 page-template-default">
-<div id="wrap" class="container">
+<div id="wrap" class="container"><a href="https://github.com/GSA/Mobile-Code-Catalog"><img style="border: 0; z-index: 1000; top: 0px" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub"></a>
 	<div class="dsic-logo"><a href="index.html"><img id="logo" src="images/dsic.png" alt="DSIC Home page"></a></div>
-	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a><a href="https://github.com/GSA/Mobile-Code-Catalog"><img style="border: 0; z-index: 1000; top: 0px" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub"></a>
+	<div class="ocsit-logo">Brought to you by:<a href="http://gsa.gov" target="_blank"><img src="images/gsa.png" alt="GSA Home page"></a>
 </div>
 	<!---<h6>Alpha, beta, your choice. This site is very much draft and a work in progress.</h6>--->
 {{ content }}
