Trying "fork-me" button

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,6 +12,7 @@
 				    	<input autocomplete="off" class="usagov-search-autocomplete" id="query" name="query" type="text" /><br>
 				    	<input name="commit" type="submit" value="Search" />
 				  	</form>
+				  	<iframe width="95" height="20" src="github-btn.html?user=gsa&repo=Mobile-Code-Catalog&type=fork&count=true" frameborder="0" scrolling="0" allowtransparency="true">
 				</div>
 			</li>
 			<li class="widget-container widget_text">
