--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,9 +12,11 @@
 				    	<input autocomplete="off" class="usagov-search-autocomplete" id="query" name="query" type="text" /><br>
 				    	<input name="commit" type="submit" value="Search" />
 				  	</form>
-				  	<iframe width="95" height="20" src="github-btn.html?user=gsa&repo=Mobile-Code-Catalog&type=fork&count=true" frameborder="0" scrolling="0" allowtransparency="true"
-  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 				</div>
+			</li>
+			<li class="widget-container widget_text">
+			<iframe src="http://ghbtns.com/github-btn.html?user=gsa&repo=Mobile-Code-Catalog&type=fork&count=true"
+  allowtransparency="true" frameborder="0" scrolling="0" width="95" height="20"></iframe>
 			</li>
 			<li class="widget-container widget_text">
 				<h3 class="widget-title">Menu</h3>
