--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -27,7 +27,8 @@
 				width: 250px;
 				}
 		</style>
-		
+<link rel="icon" type="image/png" href="http://gsa.github.io/Mobile-Code-Catalog/images/favicon.ico">
+  		
 		<title>Mobile App Catalog: {{ page.title }}</title>
 	</head>
 <body class="page page-id-10 page-template-default">
