--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -28,6 +28,9 @@
 				}
 		</style>
 <link rel="icon" type="image/png" href="http://gsa.github.io/Mobile-Code-Catalog/images/favicon.ico">
+<link rel="apple-touch-icon" href="http://gsa.github.io/Mobile-Code-Catalog/images/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="72x72" href="http://gsa.github.io/Mobile-Code-Catalog/images/apple-touch-icon-72x72.png" />
+<link rel="apple-touch-icon" sizes="114x114" href="http://gsa.github.io/Mobile-Code-Catalog/images/apple-touch-icon-114x114.png" />
   		
 		<title>Mobile App Catalog: {{ page.title }}</title>
 	</head>
