--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -23,6 +23,7 @@
 				<div class="textwdget"><a href="index.html">Home</a><h6>Mobile Web</h6>
 				<ul>
 					<li><a href="web_html.html">HTML/CSS/JS</a></li>
+					<li><a href="web_coldfusion.html">ColdFusion</a></li>
 					<li><a href="web_jsp.html">JSP</a></li>
 					<li><a href="web_php.html">PHP</a></li>
 					<li><a href="web_python.html">Python</a></li>
