--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 		<ul>
 			<li class="widget-container widget_text">
 			<p>&nbsp;</p>
-			<div class="button small"><a target="_self" class="button white" href="form.html">Submit Your Code</a></div>
+			<div class="button small"><a target="_self" class="button white" href="http://www.digitalgov.gov/contact-us/">Submit Your Code</a></div>
 				<h3 class="widget-title">Search</h3>
 				<div class="textwdget">
 					<form accept-charset="UTF-8" action="http://search.usa.gov/search" id="search_form" method="get" style="margin-top:0px;margin-bottom:-25px">
@@ -49,7 +49,7 @@
 				<h3 class="widget-title">Contact Us</h3>
 				<div class="textwdget">
 					<ul>
-					<li><strong><a href="qform.html">Got Questions?</a></strong></li>					
+					<li><strong><a href="http://www.digitalgov.gov/contact-us/">Got Questions?</a></strong></li>					
 					</ul>
 				</div>
 			</li>
