--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,6 @@
 <!doctype html>
+<html>
+<head profile="http://gmpg.org/xfn/11">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<link rel="pingback" href="http://www.digitalgov.gov/xmlrpc.php" />
@@ -148,7 +150,7 @@ font-weight:;
   		
 		<title>Mobile App Catalog: {{ page.title }}</title>
 		<link rel="stylesheet" id="custom-css-css" type="text/css" href="http://www.digitalgov.gov/?custom-css=1&#038;csblog=212&#038;cscache=6&#038;csrev=226" />
-	</head>
+</head>
 <body class="page page-id-10 page-template-default">
 <div id="wrap" class="container"><!--<a href="https://github.com/GSA/Mobile-Code-Catalog"><img style="border: 0; z-index: 1000; top: 0px" src="https://github.com/jamesflorentino/fork-ribbons/raw/master/ribbons/blue-white.png" alt="Fork me on GitHub"></a>-->
 <a class="screen-reader-text skip-link offscreen" href="#content" title="Skip to page content">Skip to page content</a> 
