--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -276,16 +276,16 @@ font-weight:;
       	
 </div>
 {{ content }}
-	<div id="footer" class="noborder sixteen columns">
-
-		<script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/app.js?ver=1.2.3"></script>
-		<script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/superfish.js?ver=1.2.3"></script>
-		<script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/jquery.formalize.min.js?ver=1.2.3"></script>
-		<br><hr>
-		<div class="full">| <a href="http://www.gsa.gov" target="_blank">www.gsa.gov</a> | <a href="http://mobilegovwiki.howto.gov">Mobile Gov Wiki</a> | <a href="form.html">Submit Your Code</a> | <a href="http://gsablogs.gsa.gov/dsic/join-in/dsic/terms-of-use">Terms of Use</a> | <a href="http://gsablogs.gsa.gov/dsic">Digital Services Innovation Center</a> |</div>
-		<div class="one_half"></div><div class="one_half last"></div>
-
-	</div>
+<div id="footer" class="noborder sixteen columns"> 
+    <script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/app.js?ver=1.2.3"></script> 
+    <script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/superfish.js?ver=1.2.3"></script> 
+    <script type="text/javascript" src="http://gsablogs.gsa.gov/dsic/wp-content/themes/dsic/javascripts/jquery.formalize.min.js?ver=1.2.3"></script> 
+    <br>
+    <hr>
+    <div class="full">| <a href="http://www.gsa.gov" target="_blank">www.gsa.gov</a> | <a href="http://mobilegovwiki.howto.gov">Mobile Gov Wiki</a> | <a href="form.html">Submit Your Code</a> | <a href="http://gsablogs.gsa.gov/dsic/join-in/dsic/terms-of-use">Terms of Use</a> | <a href="http://gsablogs.gsa.gov/dsic">Digital Services Innovation Center</a> |</div>
+    <div class="one_half"></div>
+    <div class="one_half last"></div>
+  </div>
 </div>
 <script type="text/javascript">
 //<![CDATA[
