--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -110,6 +110,9 @@ font-weight:;
 #footer a:hover, #footer a:active {
 	color: #ff5049;
 }
+#wrap.container{
+	padding:0;
+}
 </style>
 
 	<!-- TopNav Superfsh JS -->
