adjusted css to account for footer
adjusted #wrap.container to allow for wider display of footer. This should do the trick.

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -110,8 +110,9 @@ font-weight:;
 #footer a:hover, #footer a:active {
 	color: #ff5049;
 }
-#wrap.container{
-	padding:0;
+#wrap, .limit, .container {
+	width:87.5%;
+	padding:0 5%;
 }
 </style>
 
